module/core/derive_tools/tests/inc/index/compiletime/struct_named_empty.stderr
error: proc-macro derive panicked
 --> tests/inc/index/compiletime/struct_named_empty.rs:3:12
  |
3 | #[ derive( Index ) ]
  |            ^^^^^
  |
  = help: message: not implemented: Index not implemented for Unit
