module/core/derive_tools/tests/inc/index/compiletime/struct_named_empty.rs
use derive_tools::Index;

#[ derive( Index ) ] 
struct EmptyStruct 
{    
}

fn main()
{  
}
